// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-panel.vue Demo-基本用法 1`] = `
<div>
  <div bordered="true" class="root" shadow="always">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">任务总览</span>
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">任务内容
    </div>
    <div></div>
  </div>
</div>
`;

exports[`u-panel.vue Demo-基本用法 2`] = `
<div>
  <div bordered="true" class="root" shadow="always">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        任务总览
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">
      <div class="root" type="paragraph">
        <h3 class="title"></h3>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
      </div>
    </div>
    <div></div>
  </div>
</div>
`;

exports[`u-panel.vue Demo-基本用法 3`] = `
<div>
  <div bordered="true" class="root" shadow="hover">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        任务总览
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">
      <div class="root" type="paragraph">
        <h3 class="title"></h3>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
      </div>
    </div>
    <div></div>
  </div>
</div>
`;

exports[`u-panel.vue Demo-基本用法 4`] = `
<div>
  <div bordered="true" class="root" shadow="never">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        任务总览
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">
      <div class="root" type="paragraph">
        <h3 class="title"></h3>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
      </div>
    </div>
    <div></div>
  </div>
</div>
`;

exports[`u-panel.vue Demo-基本用法 5`] = `
<div>
  <div class="root" shadow="always">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        任务总览
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">
      <div class="root" type="paragraph">
        <h3 class="title"></h3>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
        <p class="paragraph"></p>
      </div>
    </div>
    <div></div>
  </div>
</div>
`;

exports[`u-panel.vue Demo-面板分组 1`] = `
<div>
  <div bordered="true" class="root" shadow="always">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        <span class="root" vusion-slot-name-edit="text">任务总览</span>
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">
      <div class="root">
        <div class="head" vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">当天概览</span>
        </div>
        <div class="body" vusion-slot-name="default">概览内容
        </div>
      </div>
      <div class="root">
        <div class="head" vusion-slot-name="title" vusion-slot-name-edit="title">
          <span class="root" vusion-slot-name-edit="text">事务分组</span>
        </div>
        <div class="body" vusion-slot-name="default">事务内容
        </div>
      </div>
    </div>
    <div></div>
  </div>
</div>
`;

exports[`u-panel.vue Demo-面板分组 2`] = `
<div>
  <div bordered="true" class="root" shadow="always">
    <div class="head">
      <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
        服务
      </div>
      <a></a>
      <div class="extra" vusion-slot-name="extra">
      </div>
    </div>
    <div class="body" vusion-slot-name="default">
      <div class="root">
        <div class="head" vusion-slot-name="title" vusion-slot-name-edit="title">
          当天概览
        </div>
        <div class="body" vusion-slot-name="default">
          <div class="root" type="paragraph">
            <h3 class="title"></h3>
            <p class="paragraph"></p>
            <p class="paragraph"></p>
            <p class="paragraph"></p>
          </div>
        </div>
      </div>
      <div class="root">
        <div class="head" vusion-slot-name="title" vusion-slot-name-edit="title">
          事务分组
        </div>
        <div class="body" vusion-slot-name="default">
          <div class="root" type="paragraph">
            <h3 class="title"></h3>
            <p class="paragraph"></p>
            <p class="paragraph"></p>
            <p class="paragraph"></p>
          </div>
        </div>
      </div>
    </div>
    <div></div>
  </div>
</div>
`;
